# MoneyMonkey

./: .gitignore  README.md  main.py  pyproject.toml  test_agent.py
moneymonkey/: auth.py  config.py  db.py  parser.py  reply_format.py  sheets.py  transaction_append.py
moneymonkey/agent/: __init__.py  agent_core.py  context.py  fetch_transactions_data.py  tools.py
moneymonkey/handlers/: __init__.py  common.py  onboarding.py  settings.py  sharing.py  tables.py  transactions.py
